# dot-tasks

./: .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml  release_workflow.md
.github/: release.yml
.github/workflows/: publish.yml
.tasks/: config.yaml
.tasks/doing/2026-02-28-prevent-circular-dependency-on-update-create/: activity.md  task.md
.tasks/doing/2026-03-02-visualize-dependency-graph/: activity.md  plan.md  spec.md  task.md
.tasks/doing/2026-03-16-make-taskid-pseudorandom-to-enable-parallel-additions/: activity.md  task.md
.tasks/done/2026-02-23-append-agentmd-snippet-on-init/: activity.md  task.md
.tasks/done/2026-02-23-show-task-dir-path-on-create/: activity.md  task.md
.tasks/done/2026-02-24-add-spec-readiness-attribute/: activity.md  task.md
.tasks/done/2026-02-24-advanced-tag-system/: activity.md  plan.md  task.md
.tasks/done/2026-02-24-create-dottasks-installskill-command/: activity.md  task.md
.tasks/done/2026-02-24-fix-text-fields-cursor-arrows/: activity.md  task.md
.tasks/done/2026-02-24-include-plan-or-linktoplan-in-view/: activity.md  plan.md  task.md
.tasks/done/2026-02-24-investigate-whitespace-bug-in-taskmd/: activity.md  task.md
.tasks/done/2026-02-24-support-regression-of-status/: activity.md  plan.md  task.md
.tasks/done/2026-02-24-taskmd-config-sections-create-update/: activity.md  plan.md  task.md  walkthrough.md
.tasks/done/2026-02-24-update-skill-agent-task-init-behavior/: activity.md  plan.md  task.md
.tasks/done/2026-02-25-fix-tag-multiselect/: activity.md  plan.md  task.md
.tasks/done/2026-02-25-show-task-status-in-view-list/: activity.md  task.md
agent-tools/: AGENTS.md  README.md  agent.md
assets/: banner.txt  banner_ansi_shadow.txt  banner_doh.txt  banner_doom.txt
assets/demo/: cli-demo.tape
assets/logo/: README.md
assets/logo/ascii/: logo_pack.txt
examples/basic-demo/: AGENTS.md  README.md
scripts/: render_banner_svg.py  render_cli_demo.sh  render_logo_svg.py
src/dot_tasks/: __init__.py  _version.py  agents_snippet.py  cli.py  models.py  prompt_ui.py  render.py  selector_ui.py  service.py  storage.py
tests/: test_agents_snippet.py  test_banner_svg.py  test_cli.py  test_examples_demo.py  test_logo_assets.py  test_prompt_ui.py  test_render.py  test_storage.py
(+93 files in other folders)
