[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dot-tasks"
version = "0.1.0"
description = "Human-readable and agent-readable task manager with CLI/TUI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "dot-tasks contributors"}]
dependencies = [
  "typer>=0.12",
  "PyYAML>=6.0",
  "textual>=0.60",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dot-tasks = "dot_tasks.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
