[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dot-tasks"
dynamic = ["version"]
description = "Human-readable and agent-readable task manager with a minimal CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "dot-tasks contributors"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]
keywords = ["tasks", "cli", "workflow", "productivity", "automation"]
dependencies = [
  "typer>=0.12",
  "PyYAML>=6.0",
  "InquirerPy>=0.3.4",
  "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/Awni00/dot-tasks"
Repository = "https://github.com/Awni00/dot-tasks"
Issues = "https://github.com/Awni00/dot-tasks/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dot-tasks = "dot_tasks.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dot_tasks = ["resources/agents/*.md"]

[tool.setuptools.dynamic]
version = {attr = "dot_tasks._version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
